fix mobile navbar gap

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -73,7 +73,7 @@
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 54px;
+    top: 52px;
     left: 0;
     width: 100%;
     background-color: var(--dark);
@@ -88,7 +88,7 @@
 
 .mobile-menu .nav-link {
     text-align: right;
-    padding: 8px 16px;
+    padding: 12px 16px;
     color: var(--light);
 }
 
